--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <p>Be aware this tool just convert HTML as-is. You still need to trigger the generated EFML code to make it suitable for your project.</p>
         </section>
         <section class="field">
+            <div class="message" id="message-box" style="display: none">
+                <div class="content"></div>
+                <button class="close-btn" onclick="document.getElementById('message-box').style.display = 'none'">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z">
+                    </svg>
+                </button>
+            </div>
             <textarea id="user-input" placeholder="Your HTML code here"></textarea>
             <div class="sub-container"><button id="user-convert">Convert</button></div>
             <textarea id="user-output" placeholder="Converted EFML code will be here"></textarea>
